srbench q1 & q2 implementation using leveldb as a window cache -> very inefficient